# SCARA_ApplicationLayer

./: CMakeLists.txt
Common/: CMakeLists.txt  CommonTypes.h  ContainerOf.h  FixedPointTypes.h  Util.h
Common/ObserverPattern/Observable/: Observable.c  Observable.h  ObservableType.h
Common/ObserverPattern/Observer/: Observer.c  Observer.h  ObserverType.h
FirmwareInterface/: CMakeLists.txt
FirmwareInterface/IGpio/: IGpio.h  IGpioStubs.c  IGpioType.h
FirmwareInterface/IOneShotTimer/: IOneShotTimer.h  IOneShotTimerStubs.c  IOneShotTimerType.h
HwAbstraction/: CMakeLists.txt
HwAbstraction/StepMotor/: StepMotor.c  StepMotor.h  StepMotorType.h
Test/: CMakeLists.txt
Test/HwAbstractionTest/StepMotorTest/: StepMotorTest.c
